# BG3CinematicCombat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-release.ps1  setup-devtools.ps1  vcpkg.json
config/: BG3CinematicCombat.toml
localization_src/English/: BG3CinematicCombat_English.xml
localization_src/German/: BG3CinematicCombat_German.xml
pak_source/Localization/English/: BG3CinematicCombat_English.loca
pak_source/Localization/German/: BG3CinematicCombat_German.loca
pak_source/Mods/BG3CinematicCombat/: MCM_blueprint.json  meta.lsx
pak_source/Mods/BG3CinematicCombat/ScriptExtender/: Config.json
pak_source/Mods/BG3CinematicCombat/ScriptExtender/Lua/: BootstrapClient.lua  BootstrapServer.lua
pak_source/Mods/BG3CinematicCombat/ScriptExtender/Lua/Server/: EventDetector.lua
src/: CameraController.cpp  CameraController.h  CinematicManager.cpp  CinematicManager.h  Hooks.cpp  Hooks.h  HudToggle.cpp  HudToggle.h  IPC.cpp  IPC.h  Pattern.h  Settings.cpp  Settings.h  TimeManager.cpp  TimeManager.h  dllmain.cpp  pch.h
src/RE/: Camera.h
